// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`express integration validations req.body 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"last\\" fails because [\\"last\\" must be a string]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "last",
    ],
    "source": "body",
  },
}
`;

exports[`express integration validations req.headers 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"accept\\" fails because [\\"accept\\" with value \\"application&#x2f;json\\" fails to match the required pattern: /xml/]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "accept",
    ],
    "source": "headers",
  },
}
`;

exports[`express integration validations req.params 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"id\\" fails because [\\"id\\" must only contain alpha-numeric and underscore characters]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "id",
    ],
    "source": "params",
  },
}
`;

exports[`express integration validations req.query 1`] = `
Object {
  "error": "Bad Request",
  "message": "\\"end\\" is not allowed",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "end",
    ],
    "source": "query",
  },
}
`;
